--- a/Control_Wifi/.cproject
+++ b/Control_Wifi/.cproject
@@ -41,7 +41,14 @@
 <inputType id="de.innot.avreclipse.cppcompiler.input.1967079745" superClass="de.innot.avreclipse.cppcompiler.input"/>
 </tool>
 <tool id="de.innot.avreclipse.tool.linker.winavr.app.release.2137542301" name="AVR C Linker" superClass="de.innot.avreclipse.tool.linker.winavr.app.release"/>
-<tool id="de.innot.avreclipse.tool.cpplinker.app.release.1801643474" name="AVR C++ Linker" superClass="de.innot.avreclipse.tool.cpplinker.app.release"/>
+<tool id="de.innot.avreclipse.tool.cpplinker.app.release.1801643474" name="AVR C++ Linker" superClass="de.innot.avreclipse.tool.cpplinker.app.release">
+<option id="de.innot.avreclipse.cpplinker.option.libs.1809271411" superClass="de.innot.avreclipse.cpplinker.option.libs" valueType="libs">
+<listOptionValue builtIn="false" value="Uno"/>
+</option>
+<option id="de.innot.avreclipse.cpplinker.option.libpath.821992251" superClass="de.innot.avreclipse.cpplinker.option.libpath" valueType="stringList">
+<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Control_Wifi/lib}&quot;"/>
+</option>
+</tool>
 <tool id="de.innot.avreclipse.tool.archiver.winavr.base.698135663" name="AVR Archiver" superClass="de.innot.avreclipse.tool.archiver.winavr.base"/>
 <tool id="de.innot.avreclipse.tool.objdump.winavr.app.release.122960121" name="AVR Create Extended Listing" superClass="de.innot.avreclipse.tool.objdump.winavr.app.release"/>
 <tool id="de.innot.avreclipse.tool.objcopy.flash.winavr.app.release.1917208413" name="AVR Create Flash image" superClass="de.innot.avreclipse.tool.objcopy.flash.winavr.app.release"/>
@@ -547,6 +554,7 @@
 <storageModule moduleId="org.eclipse.cdt.core.externalSettings"/>
 <storageModule moduleId="org.eclipse.cdt.core.language.mapping"/>
 <storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
+<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 </cconfiguration>
 </storageModule>
 <storageModule moduleId="cdtBuildSystem" version="4.0.0">
