original server and client working code added to scratch

--- a/Basestation/.settings/org.eclipse.cdt.core.prefs
+++ b/Basestation/.settings/org.eclipse.cdt.core.prefs
@@ -1,3 +1,5 @@
-#Fri Jan 28 09:56:50 PST 2011
+#Fri Jan 28 11:51:33 PST 2011
 eclipse.preferences.version=1
-environment/project/de.innot.avreclipse.configuration.app.release.552878416=<?xml version\="1.0" encoding\="UTF-8" standalone\="no"?>\r\n<environment append\="true" appendContributed\="true"/>\r\n
+environment/project/de.innot.avreclipse.configuration.app.release.552878416=
+environment/project/de.innot.avreclipse.configuration.app.release.552878416/append=true
+environment/project/de.innot.avreclipse.configuration.app.release.552878416/appendContributed=true
